# applairo

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/applairo/: __init__.py  bootstrap.py  config.py  logging_config.py
backend/applairo/adapters/: __init__.py
backend/applairo/adapters/inbound/: __init__.py
backend/applairo/adapters/inbound/http/: __init__.py  app.py  routes.py  schemas.py
backend/applairo/adapters/outbound/: __init__.py
backend/applairo/adapters/outbound/adk/: __init__.py  adk_conversation.py  agent_factory.py  agent_runner.py  offer_evaluator.py  profile_extractor.py
backend/applairo/adapters/outbound/adzuna/: __init__.py  adzuna_job_search.py
backend/applairo/adapters/outbound/cv/: document_extractor.py
backend/applairo/application/: __init__.py  chat_service.py  job_search_workflow.py  progress.py  usage.py
backend/applairo/domain/: __init__.py  errors.py  models.py
backend/applairo/domain/ports/: __init__.py  conversation.py  cv_extractor.py  job_search.py  offer_evaluation.py  profile_extraction.py
docs/superpowers/plans/: 2026-07-07-job-search-agent.md
docs/superpowers/specs/: job-search-agent-design.md
frontend/: .gitignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/cv/: route.ts
frontend/app/api/search/: route.ts
frontend/app/api/search/stream/: route.ts
frontend/app/api/sessions/: route.ts
frontend/app/comment-ca-marche/: HowItWorks.tsx  page.tsx
frontend/components/: AgentTimeline.tsx  Chat.tsx  JobCard.tsx  ProfileForm.tsx  ProfilePanel.tsx  ResultsGrid.tsx  SearchFlow.tsx  Uploader.tsx  UsagePill.tsx
frontend/lib/: api.ts  backend.ts  profile.ts  progress.ts  types.ts
tools/: __init__.py  adzuna.py
