[project]
name = "applairo"
version = "0.1.0"
description = "Applairo — l'agent IA qui transforme votre profil/CV en offres d'emploi ciblées, puis postule pour vous (Google ADK + Gemini + Adzuna)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Google Developer Group ESIEA" }]
dependencies = [
    "google-adk>=1.0.0",
    "gradio>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/GDG-ESIEA/GDG_ESIEA_AI_AGENT"

[tool.uv]
package = false
